@@ -91,6 +91,10 @@ Major new features in 2.8 release
 2.8.4
 -----
 
+All (Unix):
+
+- Handle socket shutdown by the peer correctly in wxSocket (Tim Kosse)
+
 wxMSW:
 
 - Corrected wxStaticBox label appearance when its foreground colour was set:
